@@ -5,6 +5,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 
 import com.devonfw.tools.ide.commandlet.Commandlet;
@@ -594,6 +595,11 @@ public abstract class ToolCommandlet extends Commandlet implements Tags {
     ToolVulnerabilities nearestVulnerabilities = currentVulnerabilities;
     List<VersionIdentifier> toolVersions = getVersions();
     for (VersionIdentifier version : toolVersions) {
+
+      if (Objects.equals(version, resolvedVersion)) {
+        continue; // Skip the entire iteration for resolvedVersion
+      }
+
       if (acceptVersion(version, allowedVersions, requireStableVersion)) {
         ToolVulnerabilities newVulnerabilities = toolSecurity.findCves(version, this.context, minSeverity);
         if (newVulnerabilities.isSafer(latestVulnerabilities)) {
