@@ -9,6 +9,7 @@ Release with new features and bugfixes:
 * https://github.com/devonfw/IDEasy/issues/1166[#1166]: Automatic project import for IntelliJ
 * https://github.com/devonfw/IDEasy/issues/1508[#1508]: xml merger fails when merging empty file
 * https://github.com/devonfw/IDEasy/issues/1660[#1660]: ide status still failing
+* https://github.com/devonfw/IDEasy/issues/1646[#1646]: Duplicated options from CVE update suggestion
 * https://github.com/devonfw/IDEasy/issues/39[#39]: Implement ToolCommandlet for pip
 * https://github.com/devonfw/IDEasy/issues/1633[#1633]: CVE suggestions show unstable versions
 * https://github.com/devonfw/IDEasy/issues/1636[#1636]: CVE suggestion scoring more reasonable
